# ChatBot-POS

./: .gitignore  README.md  ServicesDocumentation.md  TimeTranslator.md  download_now.py  main.py  pyproject.toml
agent_mcp/: client.py  resources.py  server.py  tools.py
agent_mcp/resources/processed/: ServicesDocumentation.md
app/ai/: agent_orchestrator.py  context_service.py  llm_service.py  storage_service.py
app/bot/: client.py  handlers.py
app/mcp/resources/: ServicesDocumentation.md  TimeTranslator.md
app/models/: database.py
app/services/: analytics_api.py  api_client.py  chatbot_users_api.py  customers_api.py  ia_service.py  orders_api.py  products_api.py  suppliers_api.py
app/src/scripts/: delete_global_documents.py  process_global_documents.py
app/utils/: time_translator.py
ia_config/: Modelfile
rag-engine/RAG-Lite/: README.md
rag-engine/RAG-Lite/test/: test_vectore_store.py
test/: test_api_integraion.py  test_bd.py  test_llm.py  test_time_translator.py
