[project]
name = "chatbot-pos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.1.1",
    "python-dateutil>=2.9.0.post0",
    "python-telegram-bot>=22.6",
    "requests>=2.32.5",
    "chromadb>=1.5.5",
    "fastembed>=0.8.0",
    "odfpy>=1.4.1",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-frontmatter>=1.1.0",
    "transformers>=5.4.0",
    "aiosqlite>=0.22.1",
    "trio>=0.33.0",
    "rag-lite",
]

[tool.uv.sources]
rag-lite = { git = "https://github.com/sfmdo/RAG-Lite" }
